--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "wifianywhere",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./bin/www",
+    "start": "nodemon ./bin/www"
   },
   "repository": {
     "type": "git",
