--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/Coyas/wifyanywhere#readme",
   "dependencies": {
     "chat-engine": "^0.9.21",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.1.0",
     "mysql2": "^1.6.5",
