--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.1.0",
+    "i18n-express": "^1.1.3",
     "mysql2": "^1.6.5",
     "node-sass-middleware": "^0.11.0",
+    "passport": "^0.4.0",
     "sequelize": "^5.8.6",
     "serve-favicon": "^2.5.0"
   }
