--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
   },
   "homepage": "https://github.com/Coyas/wifyanywhere#readme",
   "dependencies": {
-    "chat-engine": "^0.9.21",
+    "body-parser": "^1.19.0",
+    "chat-engine": "^0.10.13",
+    "connect-mysql": "^2.2.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.1",
     "mysql2": "^1.6.5",
     "node-sass-middleware": "^0.11.0",
+    "passport-facebook": "^3.0.0",
     "sequelize": "^5.8.6",
     "serve-favicon": "^2.5.0"
   }
