--- a/package.json
+++ b/package.json
@@ -25,16 +25,17 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "chat-engine": "^0.10.13",
+    "connect-mysql": "^2.2.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.1",
     "i18n-express": "^1.1.3",
     "mysql2": "^1.6.5",
     "node-sass-middleware": "^0.11.0",
-    "passport-facebook": "^3.0.0",
+    "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
-    "connect-mysql": "^2.2.5",
-    "express-session": "^1.16.1",
+    "passport-facebook": "^3.0.0",
     "sequelize": "^5.8.6",
     "serve-favicon": "^2.5.0"
   }
