--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "bootstrap-table": "^1.14.2",
     "chat-engine": "^0.10.13",
     "connect-mysql": "^2.2.5",
     "cookie-parser": "^1.4.4",
+    "datatables.net": "^1.10.19",
+    "datatables.net-dt": "^1.10.19",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.1.0",
