--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,11 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "Font-Awesome": "^5.8.2",
-    "flag-icon-css": "^3.3.0"
+    "flag-icon-css": "^3.3.0",
+    "datatables.net": "^1.10.19",
+    "datatables.net-responsive": "^2.2.3",
+    "datatables.net-dt": "^3.2.2",
+    "datatables.net-scroller": "^2.0.0",
+    "datatables.net-scroller-dt": "^2.0.0"
   }
 }
