--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-mysql-session": "^2.1.0",
     "express-session": "^1.16.2",
     "express-validator": "^5.3.1",
+    "font-awesome": "^4.7.0",
     "i18n-express": "^1.1.3",
     "mysql2": "^1.6.5",
     "node-sass-middleware": "^0.11.0",
