--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "randomstring": "^1.1.5",
     "sequelize": "^5.8.12",
     "serve-favicon": "^2.5.0"
   }
