--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mysql2": "^1.6.5",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^6.2.1",
+    "nodemailer-express-handlebars": "^3.1.0",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
