--- a/config/config.json
+++ b/config/config.json
@@ -15,8 +15,8 @@
   },
   "production": {
     "username": "coyas",
-    "password": null,
-    "database": "database_production",
+    "password": "Terra.system1",
+    "database": "wifi",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
