--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
     "username": "root",
-    "password": "",
+    "password": "terrasystem",
     "database": "wifianywhere",
-    "host": "localhost",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
@@ -14,10 +14,9 @@
     "dialect": "mysql"
   },
   "production": {
-
-    "username": "root",
-    "password": null,
-    "database": "database_production",
+    "username": "coyas",
+    "password": "Terra.system1",
+    "database": "wifi",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
